Closure_59/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_59_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:34: error: cannot find symbol
import com.google.javascript.jscomp.SymbolTable;
                                   ^
  symbol:   class SymbolTable
  location: package com.google.javascript.jscomp
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:66: error: cannot find symbol
      compiler0.removeExternInput((String) null);
               ^
  symbol:   method removeExternInput(String)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:245: error: cannot find symbol
        compiler0.updateGlobalVarReferences(treeMap0, node0);
                 ^
  symbol:   method updateGlobalVarReferences(TreeMap<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:375: error: cannot find symbol
        compiler0.languageMode();
                 ^
  symbol:   method languageMode()
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:440: error: cannot find symbol
      SymbolTable symbolTable0 = compiler0.buildKnownSymbolTable();
      ^
  symbol:   class SymbolTable
  location: class Compiler_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:440: error: cannot find symbol
      SymbolTable symbolTable0 = compiler0.buildKnownSymbolTable();
                                          ^
  symbol:   method buildKnownSymbolTable()
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:480: error: cannot find symbol
        compiler0.getExternsInOrder();
                 ^
  symbol:   method getExternsInOrder()
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:631: error: cannot find symbol
      ReferenceCollectingCallback.ReferenceMap referenceCollectingCallback_ReferenceMap0 = compiler0.getGlobalVarReferences();
                                 ^
  symbol:   class ReferenceMap
  location: class ReferenceCollectingCallback
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:631: error: cannot find symbol
      ReferenceCollectingCallback.ReferenceMap referenceCollectingCallback_ReferenceMap0 = compiler0.getGlobalVarReferences();
                                                                                                    ^
  symbol:   method getGlobalVarReferences()
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1006: error: cannot find symbol
        compiler0.removeExternInput("*k%");
                 ^
  symbol:   method removeExternInput(String)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1289: error: cannot find symbol
      assertEquals("[3]", node0.getSourceFileName());
                               ^
  symbol:   method getSourceFileName()
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1330: error: cannot find symbol
        compiler0.updateGlobalVarReferences(treeMap0, node0);
                 ^
  symbol:   method updateGlobalVarReferences(TreeMap<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
/home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1348: error: cannot find symbol
        compiler0.updateGlobalVarReferences(hashMap0, node0);
                 ^
  symbol:   method updateGlobalVarReferences(HashMap<Var,ReferenceCollection>,Node)
  location: variable compiler0 of type Compiler
Note: /home/liumengjiao/Desktop/CI/Evosuite/Closure_59/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
13 errors
